Bug 95813 - OpenGL rendering results in missing or incorrect expand/collapse indicators in Tools:Options
Summary: OpenGL rendering results in missing or incorrect expand/collapse indicators i...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
5.0.3.2 release
Hardware: x86-64 (AMD64) All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:5.2.0 target:5.1.0.1
Keywords:
Depends on:
Blocks: VCL-OpenGL
  Show dependency treegraph
 
Reported: 2015-11-14 07:10 UTC by Abhilash Anandan
Modified: 2016-10-25 19:11 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
It has two images. One with OpenGL, other with Hardware rendering. Arrows are missing. (207.63 KB, application/zip)
2015-11-14 07:10 UTC, Abhilash Anandan
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Abhilash Anandan 2015-11-14 07:10:48 UTC
Created attachment 120534 [details]
It has two images. One with OpenGL, other with Hardware rendering. Arrows are missing.

Hi Team,

First of all, thanks for the hard work.

When I use OpenGL for rendering, some icons disappear. I did no do an extensive check of all the problems. But I can do it if you want me to. I will attach screenshots.
Comment 1 V Stuart Foote 2015-11-14 15:10:17 UTC
Confirming, 5.0.3.2 and on current master--affecting at least the Tools -> Options dialog

But on Windows builds, rather than not showing, the wrong icon for button is rendered.

STR

1. Open LibreOffice

2. Tools -> Options

3. normal rendering when View "Use OpenGL for all rendering (on restart)" is unchecked.  Icons for "breadcrumb" expanding of the panels are normal. 
"Right point triangle" for available in Linux, "Plus sign" icon in Windows and the alternate state opened shows a "Down point triangle" icon in Linux, "Minus sign" in Windows.

4. lose icons when View "Use OpenGL for all rendering (on restart)" checked active.  Icons for "breadcrumb" expansion are wrong.  They disappear in Linux  (available or openend) as indicated by OP, and in Windows all icons become "Minus sign" (for available or opened state).

5. reverting use OpenGL returns to correct icon use for the breadcrumbs.
Comment 2 How can I remove my account? 2015-12-14 09:22:23 UTC
In the future, when you have only a handful of files to attach to a bug report, please attach them separately, not as a .zip (or other) archive. Having to separately handle the archive really just makes it harder to work with the bug. Thanks.
Comment 3 How can I remove my account? 2015-12-14 09:31:52 UTC
Trying to avoid the word "icon" in the bug title...
Comment 4 How can I remove my account? 2015-12-14 09:33:27 UTC
Can reproduce on Windows, in the 5.1 branch. As comment #1 says, always rendered as a "minus", even when should be a "plus".
Comment 5 How can I remove my account? 2015-12-14 09:45:08 UTC
The problem is caused by the "cached native control" changes; if I put the code snippet in WinSalGraphics::drawNativeControl() that calls TryRenderCachedNativeControl() into #if 0, the bug goes away.
Comment 6 Commit Notification 2015-12-14 10:41:53 UTC
Tor Lillqvist committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=8681113dba235a21a13878bafda0a2c763f57d90

tdf#95813: Don't cache CTRL_LISTNODE (disclosure control)

It will be available in 5.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2015-12-14 10:43:46 UTC
Tor Lillqvist committed a patch related to this issue.
It has been pushed to "libreoffice-5-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=f3bcf57125196333250e95a2f9eb21caf6f8f924&h=libreoffice-5-1

tdf#95813: Don't cache CTRL_LISTNODE (disclosure control)

It will be available in 5.1.0.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Abhilash Anandan 2015-12-14 16:19:30 UTC
(In reply to Tor Lillqvist from comment #2)
> In the future, when you have only a handful of files to attach to a bug
> report, please attach them separately, not as a .zip (or other) archive.
> Having to separately handle the archive really just makes it harder to work
> with the bug. Thanks.

Ok. Will do. Didn't know I could attach more than one.
Comment 9 Jean-Baptiste Faure 2015-12-17 05:40:54 UTC
(In reply to V Stuart Foote from comment #1)
> [...]
> 4. lose icons when View "Use OpenGL for all rendering (on restart)" checked
> active.  Icons for "breadcrumb" expansion are wrong.  They disappear in
> Linux  (available or openend) as indicated by OP, and in Windows all icons
> become "Minus sign" (for available or opened state).

We have the same problem (at least on Linux) with the Navigator with OpenGL rendering activated and GTK3 disabled. No problem if GTK3 is activated.
Tested on Ubuntu 15.10 x86-64.

Best regards. JBF