tdf#95813: Don't cache CTRL_LISTNODE (disclosure control)

It keeps state that apparently doesn't affect its cache hash key.

Change-Id: I82ead9fcded16152f2a106a971484cf4a9eaf8ea